--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -15,7 +15,8 @@
     }
   },
   "files": [
-    "dist"
+    "dist",
+    "src-dev"
   ],
   "scripts": {
     "build": "tsup",
@@ -37,13 +38,13 @@
   },
   "peerDependencies": {
     "@modelcontextprotocol/sdk": "^1.26.0",
-    "vite": "^5.0.0 || ^7.0.0"
+    "vite": "^5.0.0 || ^7.0.0",
+    "glob": "^13.0.0"
   },
-  "dependencies": {
-    "glob": "^13.0.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/node": "^24.10.1",
+    "glob": "^13.0.1",
     "globals": "^16.5.0",
     "tsup": "^8.5.1",
     "typescript": "~5.9.3",
