--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^25.2.1",
     "globals": "^17.3.0",
     "typescript": "^5.9.3",
-    "vite": "^7.3.1"
+    "vite": "^7.3.1",
+    "vite-plugin-mcp-builder": "^0.0.1"
   }
 }
