--- a/packages/define/tsconfig.json
+++ b/packages/define/tsconfig.json
@@ -22,5 +22,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src", "src-dev/define.ts"]
+  "include": ["src", "src/define.ts"]
 }
