--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -8,10 +8,6 @@
     ".": {
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
-    },
-    "./define": {
-      "import": "./dist/define.js",
-      "types": "./dist/define.d.ts"
     }
   },
   "files": [
@@ -40,10 +36,12 @@
   },
   "peerDependencies": {
     "@modelcontextprotocol/sdk": "^1.26.0",
-    "vite": "^3 || ^4 || ^5 || ^6 || ^7",
-    "glob": "^13.0.0"
+    "glob": "^13.0.0",
+    "vite": "^3 || ^4 || ^5 || ^6 || ^7"
   },
-  "dependencies": {},
+  "dependencies": {
+    "mcp-define": "^0.0.1"
+  },
   "devDependencies": {
     "@types/node": "^24.10.1",
     "glob": "^13.0.1",
