--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -13,9 +13,10 @@
     "globals": "^17.3.0",
     "typescript": "^5.9.3",
     "vite": "^7.3.1",
-    "vite-plugin-mcp-builder": "^0.0.1"
+    "vite-plugin-mcp-builder": "^0.0.2"
   },
   "dependencies": {
+    "glob": "^13.0.1",
     "mcp-define": "^0.0.1"
   }
 }
