--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -37,13 +37,15 @@
   "peerDependencies": {
     "@modelcontextprotocol/sdk": "^1.26.0",
     "glob": "^13.0.0",
+    "express": "^5.2.1",
+    "mcp-define": "^0.0.1",
     "vite": "^3 || ^4 || ^5 || ^6 || ^7"
   },
-  "dependencies": {
-    "mcp-define": "^0.0.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/node": "^24.10.1",
+    "express": "^5.2.1",
+    "mcp-define": "^0.0.1",
     "glob": "^13.0.1",
     "globals": "^16.5.0",
     "tsup": "^8.5.1",
